# uncooked-tracer

./: CMakeLists.txt  image.ppm  runDebug.bat
RaytracingNehuel1/: CMakeLists.txt  vec3.h
uncooked-tracer/: CMakeLists.txt  camera.h  colour.h  hittable.h  hittableList.h  interval.h  ray.h  sphere.h  uncooked-tracer.cpp  uncooked-tracer.h  vec3.h
